@@ -377,25 +377,7 @@ To confine meta class changes to the scope of a feature method or spec class, us
 
 [source,groovy]
 ----
-@Stepwise
-class FooSpec extends Specification {
-  @ConfineMetaClassChanges([String])
-  def "I run first"() {
-    when:
-    String.metaClass.someMethod = { delegate }
-
-    then:
-    String.metaClass.hasMetaMethod('someMethod')
-  }
-
-  def "I run second"() {
-    when:
-    "Foo".someMethod()
-
-    then:
-    thrown(MissingMethodException)
-  }
-}
+include::{sourcedir}/extension/ConfineMetaClassChangesDocSpec.groovy[tag=example]
 ----
 
 When applied to a spec class, the meta classes are restored to the state that they were in before `setupSpec` was executed,
@@ -403,6 +385,9 @@ after `cleanupSpec` is executed.
 
 When applied to a feature method, the meta classes are restored to as they were after `setup` was executed,
 before `cleanup` is executed.
+
+To confine meta class changes for multiple classes, you can either give multiple classes to the `value` attribute
+of the annotation or you can apply the annotation multiple times to the same target.
 
 CAUTION: Temporarily changing the meta classes is only safe when specs are
 run in a single thread per JVM. Even though many execution environments do limit themselves to one thread
